--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -8,7 +8,7 @@ This release includes a much requested feature: an option to require all query t
 🧰 Most integrations (SDKs, clients, libraries) will be compatible with this version within four hours of the release. Sometimes this can take up to 24 hours, depending on the issues we encounter during the release.
 
 Here is the exhaustive list of integrations  **not compatible** with v0.29.0:
-- [meilisearch-dart](https://github.com/meilisearch/meilisearch-dart) and [meilisearch-swift](https://github.com/meilisearch/meilisearch-swift): You can use it with v0.29.0 but the [`matchingStrategy` feature](#customize-matching-strategy) is not integrated yet. Let us know if you really need it, and contributions are always welcome!
+- [meilisearch-dart](https://github.com/meilisearch/meilisearch-dart) and [meilisearch-swift](https://github.com/meilisearch/meilisearch-swift): though you can use still use both libraries with v0.29.0, the [`matchingStrategy` feature](#customize-matching-strategy) is not yet available. Let us know if you really need it—and contributions are always welcome!
 - [meilisearch-java](https://github.com/meilisearch/meilisearch-java): Our team is still working on refactoring the code, and the SDK cannot be used with v0.29.0. Follow the repository to know when it will be compatible.
 
 <!-- The following line should NOT be put in the official release changelogs -->
