--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -18,7 +18,7 @@ Here is the exhaustive list of integrations  **not compatible** with v0.29.0:
 
 ## Customize matching strategy
 
-It's now possible to control how Meilisearch matches documents during search by choosing to return only documents containing **all** the query words.
+It is now possible to control how Meilisearch matches documents during search by choosing to return only documents containing **all** query terms.
 
 ### How to activate it?
 
