--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -31,7 +31,7 @@ curl \
 
 Here Meilisearch will only return documents containing "american" AND "ninja".
 
-By default, Meilisearch will still return documents containing all the query words, followed by documents that don't contain all the query words.
+Meilisearch's default matching strategy is `last`. It will still return documents containing all the query words, followed by documents that don't contain all the query words.
 
 <!-- The following line should only be put in the official release changelogs, not for the RC -->
 Check out the [documentation]().
