--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -29,7 +29,7 @@ curl \
   --data-binary '{ "q": "american ninja", "matchingStrategy": "all" }'
 ```
 
-Here Meilisearch will only return documents containing "american" AND "ninja".
+By setting `"matchingStrategy": "all"` In the above example, we ensure Meilisearch will only return documents containing both "american" AND "ninja".
 
 Meilisearch's default matching strategy is `last`. It will still return documents containing all the query words, followed by documents that don't contain all the query words.
 
