--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -34,7 +34,7 @@ By setting `"matchingStrategy": "all"` In the above example, we ensure Meilisear
 Meilisearch's default matching strategy is `last`. It will still return documents containing all the query words, followed by documents that don't contain all the query words.
 
 <!-- The following line should only be put in the official release changelogs, not for the RC -->
-Check out the [documentation]().
+Check out the [documentation for more information on `matchingStrategy`](https://docs.meilisearch.com/reference/api/search.html#matching-strategy).
 
 Made by @ManyTheFish in #2578 and meilisearch/milli#598.
 
