--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -40,7 +40,7 @@ Made by @ManyTheFish in #2578 and meilisearch/milli#598.
 
 ## Thai language support
 
-Thai is now supported 🇹🇭
+Meilisearch now offers optimized support for Thai 🇹🇭
 
 If your language is missing in Meilisearch, please consider contributing to the [Meilisearch tokenizer](https://github.com/meilisearch/charabia) by following the CONTRIBUTING.md file and integrating your intended normalizer/segmenter.
 
