--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -44,7 +44,7 @@ Meilisearch now offers optimized support for Thai 🇹🇭
 
 Want optimized support for your language? Consider contributing to the [Meilisearch tokenizer](https://github.com/meilisearch/charabia) by following the CONTRIBUTING.md file and integrating your intended normalizer/segmenter.
 
-The whole core team is available to help you contribute. Feel free to ask for any clarifications!
+The core team is always happy to help our contributor. Do drop us a line if you need us to clarify anything!
 
 Made by our dear contributor @aFluffyHotdog and by @ManyTheFish in meilisearch/charabia#114, meilisearch/charabia#115, meilisearch/milli##611, and #2636.
 
