--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -50,7 +50,7 @@ Made by our dear contributor @aFluffyHotdog and by @ManyTheFish in meilisearch/c
 
 ## Performance improvements for indexing
 
-We improved the indexing speed, especially for `filterableAttributes` and document update and deletion.
+We improved Meilisearch's indexing speed, especially for indexes using `filterableAttributes` and when updating and deleting documents.
 
 For more information on the main improvements, check out the following issues: meilisearch/product#513 and meilisearch/product#520.
 
