--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -73,7 +73,7 @@ With the following set of documents:
 - The filter `price IN [30, 20]` will select documents `1` and `3`.
 
 These operators can be combined with the existing `NOT` (`!=`) operator.
-More about [filtering](https://docs.meilisearch.com/learn/getting_started/filtering_and_sorting.html).
+Read more about [filtering in Meilisearch's documentation](https://docs.meilisearch.com/learn/getting_started/filtering_and_sorting.html).
 
 Made by @loiclec in #2636, meilisearch/milli#596, and meilisearch/milli#556.
 
