--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -89,7 +89,7 @@ Made by our dear contributors @Mcdostone and @phdavis1027 in #2080 and #2579.
 
 ## Auto-batching
 
-This previously experimental feature is now activated by default.
+This previously experimental feature is now enabled by default.
 
 For people who activated it in previous versions using `--enable-auto-batching`, you need to remove this flag when running Meilisearch. All the previous settings (`--debounce-duration-sec`, `--max-batch-size` and `--max-documents-per-batch`) have been removed.
 
