--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -119,7 +119,7 @@ Made by @loiclec in #2636, and meilisearch/milli#596.
 * Completely rework the README (#2504) @CaroFG, @curquiza, @guimachiavelli, and @gmourier
 * Add analytics to the `/stats` routes (#2674) @irevoire
 * Update link to Cloud beta form (#2625) @davelarkan
-* Internal feature only: integrate `/metrics` route (#2657) @pavo-tusker
+* Internal feature: integrate `/metrics` route (#2657) @pavo-tusker
 * Fix typo (#2508, #2517, #2556) @ryanrussell
 * Use nightly for `cargo fmt` in CI (#2519) @curquiza
 * Fix content of dump/assets for testing (#2544) @loiclec
