--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -111,7 +111,7 @@ Made by @loiclec in #2636, and meilisearch/milli#596.
 * Clamp databases max size to a multiple of system page size (#2662) @ManyTheFish
 * Prevent removing whitespace trimming during document id validation (#2636 and meilisearch/milli#599) @ManyTheFish
 * Support https in `print_launch_resume` (#2664) @evpeople
-* Filters can not accept unquoted reserved keywords as field names/values (#2636 and meilisearch/milli#596) @loiclec
+* Filters: reserved keywords must wrapped in quotation marks when used field names/values  (#2636 and meilisearch/milli#596) @loiclec
 * Fix filtering selection (#2636 and meilisearch/milli#568) @GraDKh
 
 # Misc
