--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -101,7 +101,7 @@ Made by @Kerollmops in meilisearch/milli#561, #2523, and #2677.
 
 ## `!=` (`NOT`) filter operator
 
-This behavior change is consistent with the `EXISTS` and `IN` operators. The `NOT` filter now also matches documents that don't have the related attributes.
+This behavior change is consistent with the `EXISTS` and `IN` operators. The `NOT` filter now also matches documents missing the specified attributes.
 More explanation with examples [here](https://github.com/meilisearch/meilisearch/issues/2486).
 
 Made by @loiclec in #2636, and meilisearch/milli#596.
