--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -95,7 +95,7 @@ For people who activated it in previous versions using `--enable-auto-batching`,
 
 For people who hadn't activated it, it does not change anything but increases the indexing speed 🏎️
 
-If there are any issues during indexing, the `--disable-auto-batching` flag (or the environment variable `MEILI_DISABLE_AUTO_BATCHING`) is available.
+If you experience any issues during indexing, try using `--disable-auto-batching` flag (or the environment variable `MEILI_DISABLE_AUTO_BATCHING`).
 
 Made by @Kerollmops in meilisearch/milli#561, #2523, and #2677.
 
