--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -93,7 +93,7 @@ This previously experimental feature is now enabled by default.
 
 For people who activated it in previous versions using `--enable-auto-batching`, you need to remove this flag when running Meilisearch. All the previous settings (`--debounce-duration-sec`, `--max-batch-size` and `--max-documents-per-batch`) have been removed.
 
-For people who hadn't activated it, it does not change anything but increases the indexing speed 🏎️
+If you did not enable auto-batching before, the transition should be seamless and increase indexing speed 🏎️
 
 If you experience any issues during indexing, try using `--disable-auto-batching` flag (or the environment variable `MEILI_DISABLE_AUTO_BATCHING`).
 
