--- a/roadmaps/2022.md
+++ b/roadmaps/2022.md
@@ -91,33 +91,73 @@ The core team has two main goals for this quarter: to improve the product and al
 
 Since API stabilization has been done in v0.28.0, the core team is close to releasing v1. The following list still needs to be done:
 
-- [ ] Stabilize the auto-batching feature: this feature works in a completely transparent way, thus making it not visible to the users.
-- [ ] Clean and stabilize the Meilisearch CLI.
-- [ ] Ensure the API key management feature is stabilized.
+- [ ] Stabilize the auto-batching feature
+  - [X] this feature is available by default but can be disable.
+  - [ ] this feature works in a completely transparent way, thus making it not visible to the users -> not enough feedback to be fully transparent.
+- [ ] Clean and stabilize the Meilisearch CLI -> Collecting feedback already started, but the implementation will be done next quarter.
+- [X] Ensure the API key management feature is stabilized -> we did not get any feedback about API that would involve changing the API key feature.
+- [X] Starting discussion about versioning policy
 
-v1 will not be released during Q3, but we hope to be able to release it by the end of the year or by the beginning of 2023.
+v1 will not be released during Q3, but we hope to be able to release it by the end of the year or by the beginning of 2023 -> A date has been decided for beginning of Febuary 2023.
 
 ### Improve the Meilisearch product
 
 This part is tightly related to the product team and is mostly decided on their side via the Product Squads and user discussions.
 
-- [ ] Release v0.28.0 (11th July) containing the API stabilization. Handle the support and the user feedback following the massive breaking changes.
-- [ ] Release v0.29.0 (September)
-  - [ ] Fixing user pain points like pagination.
-  - [ ] Improving the document deletion speed.
-  - [ ] Adding really demanded features like multi-index search.
-- [ ] Start v0.30.0 implementation (content not planned yet)
+- [X] Release v0.28.0 (11th July) containing the API stabilization. Handle the support and the user feedback following the massive breaking changes.
+- [X] Release v0.29.0 (September)
+  - [X] Including the `matchingStrategy` parameter
+  - [X] Improving the filtering experience
+  - [X] Improving the document deletion speed
+  - [ ] Fixing user pain points like pagination -> is delayed to v0.30.0, so Q4 2022.
+  - [ ] Adding really demanded features like multi-index search -> not a priority for 2022 anymore regarding the features we need to prioritize first for v1
+- [X] Start v0.30.0 implementation, including search pagination and remove user frustrations to be more production ready
 
 ### Team
 
-- [ ] Finish the recruitment process to hire a senior software engineer.
-- [ ] Onboard the new software engineer.
-- [ ] Adapt the team synchronization and rhythm according to the Product Squad (PS) freshly introduced by the product team.
+- [X] Finish the recruitment process to hire a senior software engineer.
+- [ ] Onboard the new software engineer -> The person arrives next quarter.
+- [X] Adapt the team synchronization and rhythm according to the Product Squad (PS) freshly introduced by the product team -> We had some delay but we found out the new way of working with Product Squad better fits the needs of the team.
 
 ### Misc
 
-- [ ] Finish internship work on Jayson. Integrate it to one or two routes on the Meilisearch side.
-- [ ] Work with the devrel team to promote the contributions we need on the tokenizer side.
-- [ ] Keep improving indexation speed/crash
-  - [ ] by gathering user feedback and use-cases and creating benchmarks according to them: we'll ensure we succeeded or not the improvement.
-  - [ ] by keep investigating and trying new technical solutions on our side.
+- [ ] Finish internship work on Jayson. Integrate it to one or two routes on the Meilisearch side. -> We don't know yet if we will prioritize it in Q4 2022 due to the huge breaking it can lead.
+- [X] Work with the devrel team to promote the contributions we need on the tokenizer side -> done during Hacktoberfest, so Q4 2022.
+- [X] Keep improving indexation speed/crash
+  - [ ] by gathering user feedback and use-cases and creating benchmarks according to them: we'll ensure we succeeded or not the improvement -> We are working on creating use-case benchmarks in Q4 2022.
+  - [X] by keep investigating and trying new technical solutions on our side -> we made a lot of changes described in [this issue](https://github.com/meilisearch/meilisearch/issues/2132).
+
+## Q4 2022
+
+This quarter is the last one we have to prepare v1 in good condition. This way, we have prioritized tasks that would help the team deliver Meilisearch v1: a stable and impactful version of Meilisearch.
+It also means we will de-prioritize implementations that could impact in a bad way the critical features of Meilisearch, like improving the indexing speed in a way that would risk making the indexing fail.
+
+Q4 is also the quarter where the Hacktoberfest is happening and this will lead us to spend time on it. We created a lot if issues during Q3, especially regarding the language support, and we hope attract the community and make them contribute in October.
+
+### v1 work
+
+- [ ] Be production ready for v1
+  - [ ] Release the missing production-ready features: index swap, cancel/delete of tasks, and other missing features noticed by the product team.
+  - [ ] Ensure we don't have any bugs/crashes impacting the stability of Meilisearch. The RAM consumption should be appropriate when indexing and searching, or at least we must be transparent with the users about it.
+  - [ ] Define more precisely what kind of distribution we support. Transparency is the key to this point. Then, we need to ensure we have tests/CIs appropriate to them.
+  For example, what about the Debian 10 distribution? And what about Windows and the prioritization we should give to it? Indeed, all the features of Meilisearch do not work with Windows so far, like dumps. It's important to provide transparency about it.
+- [ ] Define our versioning policy process post v1
+- [ ] Define our beta/deprecated process post v1
+- [ ] Create some benchmarks of concrete use cases. We need to define the real objectives of the project, how to ensure to make it useful at the end. Create a Product Squad for it and manage it as a new feature of Meilisearch could be a good start.
+
+### Team
+
+- [ ] Onboard the new senior software engineer: at the beginning of November, we welcome a new software engineer to the team.
+- [ ] This is the end of the internship of one of our teammates. Following a promotion, we want to integrate him in the sprint as any developer of the team.
+- [ ] Increase the communication and synchronization
+  - [ ] Reconsider some of our meeting formats: weekly meetings and retrospectives.
+  - [ ] Define some communication rules to ensure everyone gets all the information and is reactive and accountable when pinged (GitHub and Slack).
+- [ ] Reconsider the name of the team that is currently "core team". We noticed this name is not adapted to the job of the team; indeed "core team" in most companies is often the central team that makes important decisions. Also, this name can feel uninclusive, giving the team the feeling of being central and more important than the others. Even if we don't have the time to find a new name, we would like to, at least, start the discussions with the whole team during Q4.
+- [ ] Share more metrics in the team and even outside the team. Be more transparent about what we do regarding metrics. This is a vague objective and can take a lot of time to be "solved", but this is something the team would like to keep in mind.
+
+### Release process
+
+- [ ] Ensure we don't have issues when releasing new Meilisearch versions like we had in v0.29.1: we indeed had git conflicts that led us to integrate non-stable commits (from `main` into the `stable`). We don't know yet how to avoid it or if it can be solved by automating this step or not, but we want to watch out for this.
+- [ ] Increase our velocity by simplifying some processes: we noticed the [Milli repository](https://github.com/meilisearch/milli/), by being separated from the [Meilisearch repository](https://github.com/meilisearch/meilisearch), introduces a lot of paint points during our release process. A bug in Meilisearch, which is actually in Milli, forces us to do the fix in Milli, update the Milli version, release the new Milli version and then bump the new Milli version in Meilisearch. Also, when we want to do hotfixes on Meilisearch where Milli is involved (i.e. release a specific version of Milli that does not contain all the current commits on `main`) we have to do tricky git manipulation to ensure we don't add extra commits.
+We are not sure we will have the time to do the final transfer during Q4 if we decide to do it, but we would like at least start discussions together and make some decisions about it.
+- [ ] Automate some processes if possible. We know our current release process is heavy and can lead to mistakes despite [our current documentation](../resources/meilisearch-release.md). We will probably lack time for this, but at least thinking about some solutions could be a good start.
