Update roadmap regarding crash/bug of Meilisearch

--- a/roadmaps/2022.md
+++ b/roadmaps/2022.md
@@ -138,7 +138,7 @@ Q4 is also the quarter where the Hacktoberfest is happening and this will lead u
 
 - [ ] Be production ready for v1
   - [ ] Release the missing production-ready features: index swap, cancel/delete of tasks, and other missing features noticed by the product team.
-  - [ ] Ensure we don't have any bugs/crashes impacting the stability of Meilisearch. The RAM consumption should be appropriate when indexing and searching, or at least we must be transparent with the users about it.
+  - [ ] We know Meilisearch can have bugs/crashes impacting the stability of the search engine in production. In the best world, the RAM consumption should be appropriate when indexing and searching. It means our priority during this quarter is to identify the different weaknesses of Meilisearch and make decision about them: being transparent with the users is the most important part to achieve if the problem cannot be solved by any implementation before v1.
   - [ ] Define more precisely what kind of distribution we support. Transparency is the key to this point. Then, we need to ensure we have tests/CIs appropriate to them.
   For example, what about the Debian 10 distribution? And what about Windows and the prioritization we should give to it? Indeed, all the features of Meilisearch do not work with Windows so far, like dumps. It's important to provide transparency about it.
 - [ ] Define our versioning policy process post v1
