Add more priority to new core team name

--- a/roadmaps/2022.md
+++ b/roadmaps/2022.md
@@ -152,7 +152,7 @@ Q4 is also the quarter where the Hacktoberfest is happening and this will lead u
 - [ ] Increase the communication and synchronization
   - [ ] Reconsider some of our meeting formats: weekly meetings and retrospectives.
   - [ ] Define some communication rules to ensure everyone gets all the information and is reactive and accountable when pinged (GitHub and Slack).
-- [ ] Reconsider the name of the team that is currently "core team". We noticed this name is not adapted to the job of the team; indeed "core team" in most companies is often the central team that makes important decisions. Also, this name can feel uninclusive, giving the team the feeling of being central and more important than the others. Even if we don't have the time to find a new name, we would like to, at least, start the discussions with the whole team during Q4.
+- [ ] Reconsider the name of the team that is currently "core team". We noticed this name is not adapted to the job of the team; indeed "core team" in most companies is often the central team that makes important decisions. Also, this name can feel uninclusive, giving the team the feeling of being central and more important than the others.
 - [ ] Share more metrics in the team and even outside the team. Be more transparent about what we do regarding metrics. This is a vague objective and can take a lot of time to be "solved", but this is something the team would like to keep in mind.
 
 ### Release process
