Add product roadmap

--- a/roadmaps/2022.md
+++ b/roadmaps/2022.md
@@ -134,6 +134,8 @@ It also means we will de-prioritize implementations that could impact in a bad w
 
 Q4 is also the quarter where the Hacktoberfest is happening and this will lead us to spend time on it. We created a lot if issues during Q3, especially regarding the language support, and we hope attract the community and make them contribute in October.
 
+The product roadmap related to the core team can be followed here: https://github.com/meilisearch/product/projects/5
+
 ### v1 work
 
 - [ ] Be production ready for v1
