Remove onboarding from the TODO

--- a/roadmaps/2022.md
+++ b/roadmaps/2022.md
@@ -134,6 +134,8 @@ It also means we will de-prioritize implementations that could impact in a bad w
 
 Q4 is also the quarter where the Hacktoberfest is happening and this will lead us to spend time on it. We created a lot if issues during Q3, especially regarding the language support, and we hope attract the community and make them contribute in October.
 
+Finally, during this quarter, we will welcome our new senior software engineer. We also promoted one of our intern team mates to become a developer of the team.
+
 The product roadmap related to the core team can be followed here: https://github.com/meilisearch/product/projects/5
 
 ### v1 work
@@ -149,8 +151,6 @@ The product roadmap related to the core team can be followed here: https://githu
 
 ### Team
 
-- [ ] Onboard the new senior software engineer: at the beginning of November, we welcome a new software engineer to the team.
-- [ ] This is the end of the internship of one of our teammates. Following a promotion, we want to integrate him in the sprint as any developer of the team.
 - [ ] Increase the communication and synchronization
   - [ ] Reconsider some of our meeting formats: weekly meetings and retrospectives.
   - [ ] Define some communication rules to ensure everyone gets all the information and is reactive and accountable when pinged (GitHub and Slack).
