--- a/roadmaps/2022.md
+++ b/roadmaps/2022.md
@@ -92,7 +92,7 @@ The core team has two main goals for this quarter: to improve the product and al
 Since API stabilization has been done in v0.28.0, the core team is close to releasing v1. The following list still needs to be done:
 
 - [ ] Stabilize the auto-batching feature
-  - [X] this feature is available by default but can be disable.
+  - [X] this feature is available by default but can be disabled.
   - [ ] this feature works in a completely transparent way, thus making it not visible to the users -> not enough feedback to be fully transparent.
 - [ ] Clean and stabilize the Meilisearch CLI -> Collecting feedback already started, but the implementation will be done next quarter.
 - [X] Ensure the API key management feature is stabilized -> we did not get any feedback about API that would involve changing the API key feature.
