--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -152,6 +152,7 @@ TBD
 ## Other improvements
 
 * Full support for compressed (Gzip, Brotli, Zlib) API requests (#2876) @mou
+* Significant indexing speed improvements (meilisearch/milli#639 and meilisearch/milli##619) @loiclec
 * Provide Apple Silicon binaries (#2837) @jeertmans
 * Add missing environment variables for dump and snapshot features (#2738) @gmourier
 * Increase max concurrent readers from 126 to 1024 (#2830) @arriven
