--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -152,7 +152,7 @@ TBD
 ## Other improvements
 
 * Full support for compressed (Gzip, Brotli, Zlib) API requests (#2876) @mou
-* Significant indexing speed improvements (meilisearch/milli#639 and meilisearch/milli##619) @loiclec
+* Significant indexing speed improvements (meilisearch/milli#639 and meilisearch/milli#619) @loiclec
 * Provide Apple Silicon binaries (#2837) @jeertmans
 * Add missing environment variables for dump and snapshot features (#2738) @gmourier
 * Increase max concurrent readers from 126 to 1024 (#2830) @arriven
@@ -168,6 +168,9 @@ TBD
 * Improve the error message when adding documents: replace a meaningless serde message (#2819) @onyxcherry
 * Fix `dumpCreation` tasks (#2890) @washbin
 * Don't panic when the error length is slightly over 100 (#2727) @onyxcherry
+* Fix phrase search (meilisearch/milli#639 and meilisearch/milli#647) @loiclec
+* Fix filtering (meilisearch/milli#619) @loiclec
+* Fix `facetDistribution` when setting `maxFacetPerValue` if a few documents are returned (meilisearch/milli#619) @loiclec
 
 # Misc
 
