--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -3,7 +3,7 @@
 <!-- The following line should NOT be put in the official release changelogs -->
 ⚠️ Since this is a release candidate (RC), we do NOT recommend using it in a production environment. Something not working as expected? We welcome [bug reports](https://github.com/meilisearch/meilisearch/issues/new/choose) and [feedback about new features](https://github.com/meilisearch/product/discussions).
 
-This release makes Meilisearch more and more production-ready by removing the downtime of index deployment and adding new features related to task management. Also, we improve our API to perform pagination on search results.
+This release removes index deployment downtime and adds new task management features. It also introduces new search parameters that facilitate the creation of numbered pagination interfaces.
 
 Thanks to Hacktoberfest, tons of the improvements and bug fixes have been done by the fantastic Meilisearch community ❤️ You were more present than ever, and the whole Meilisearch team is deeply grateful for this!
 
