--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -5,7 +5,7 @@
 
 This release removes index deployment downtime and adds new task management features. It also introduces new search parameters that facilitate the creation of numbered pagination interfaces.
 
-Thanks to Hacktoberfest, tons of the improvements and bug fixes have been done by the fantastic Meilisearch community ❤️ You were more present than ever, and the whole Meilisearch team is deeply grateful for this!
+Thanks to Hacktoberfest, tons of updates and bug fixes have been done by the fantastic Meilisearch community. You were more present than ever and words cannot make justice tojust  how grateful we are for your support. A big thank you from the whole Meilisearch team! ❤️ 
 
 <!-- The following line should NOT be put in the official release changelogs -->
 📖 The official documentation is not updated yet but will be ready for the official v0.30.0 release. The work-in-progress documentation is available [here]().
