--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -14,9 +14,9 @@ Thanks to Hacktoberfest, tons of updates and bug fixes have been done by the fan
 
 ## Cancel processing and enqueued tasks
 
-When you need need to perform indexing operations on Meilisearch, you can end up with a long task being processed you finally want to stop: Meilisearch can now cancel `enqueued` or `processing` tasks.
+Meilisearch now allows you to cancel `enqueued` or `processing` tasks through a new API route, `/tasks/cancel`. This can be useful when you need to interrupt a process that is taking too much time to be completed.
 
-When using the `POST /tasks/cancel`, you have to use one of the following query parameters to filter: `uid`, `status`, `type`, `indexUid`, or a date (using `afterXAt` and `beforeXAt` where `X` is `enqueued`, `started` or `finished`)
+To cancel a task, select it by specifying one of the following query parameters: `uid`, `status`, `type`, or `indexUid`. You can also select a task by date using one of the following query parameters: `afterEnqueuedAt`, `afterStartedAt`, `afterFinishedAt`, `beforeEnqueuedAt`,`beforeStartedAt`, or `beforeFinishedAt`.
 
 For example, to cancel tasks by `uid`:
 
