--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -188,7 +188,7 @@ TBD
   * Upgrade to alpine 3.16 in Dockerfile (#2827) @nontw
 * Documentation
   * Update internal CLI documentation (#2839) @jeertmans
-  * Improve issue template display to avoid support in Meilisearch issues (#2772) @curquiza
+  * Improve issue template to avoid support questions in Meilisearch issues (#2772) @curquiza
   * Update Hacktoberfest section in CONTRIBUTING.md (#2817, #2794, #2793) @meili-bot @curquiza @Luna-meili
   * Fix typos (#2789) @kianmeng
   * Fix broken link in CONTRIBUTING.md (#2845) @AnirudhDaya
