--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -192,7 +192,7 @@ TBD
   * Update Hacktoberfest section in CONTRIBUTING.md (#2817, #2794, #2793) @meili-bot @curquiza @Luna-meili
   * Fix typos (#2789) @kianmeng
   * Fix broken link in CONTRIBUTING.md (#2845) @AnirudhDaya
-* Deleted v1.rs because it is not included in Project (#2834) @Himanshu664
+* Delete v1.rs since it is not included in project (#2834) @Himanshu664
 * Download-latest script: some refactoring (#2913) @nfsec
 * Make Clippy happy (#2831) @Kerollmops
 
