--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -193,7 +193,7 @@ TBD
   * Fix typos (#2789) @kianmeng
   * Fix broken link in CONTRIBUTING.md (#2845) @AnirudhDaya
 * Delete v1.rs since it is not included in project (#2834) @Himanshu664
-* Download-latest script: some refactoring (#2913) @nfsec
+* Download-latest script: refactoring (#2913) @nfsec
 * Make Clippy happy (#2831) @Kerollmops
 
 ❤️ Thanks again to our external contributors:
