--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -92,11 +92,9 @@ To swap indexes, use:
 curl \
   -X POST 'http://localhost:7700/swap-indexes'\
   -H 'Content-Type: application/json' \
-  --data-binary '
-    [
+  --data-binary '[
       { "indexes": ["indexA", "indexB"] }
-    ]
-  '
+  ]'
 ```
 
 ```json
