--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -49,9 +49,9 @@ Done in #2763 by @irevoire, @Kerollmops and @loiclec.
 
 ## Delete old processed tasks
 
-To reduce the occupied space on your disk, you can remove the finished tasks (`succeeded`, `failed` or `canceled`) kept in the Meilisearch history.
+This release introduces a new `DELETE` endpoint to the `/tasks` route. You can use it to remove finished tasks (`succeeded`, `failed` or `canceled`) from Meilisearch's task history. This can be helpful in reducing the amount of occupied disk space.
 
-When using the `DELETE /tasks`, you have to use one of the following query parameters to filter: `uid`, `status`, `type`, `indexUid`, or a date (using `afterXAt` and `beforeXAt` where `X` is `enqueued`, `started` or `finished`).
+To delete a finished task, select it by specifying one of the following query parameters: `uid`, `status`, `type`, or `indexUid`. You can also select a task by date using one of the following query parameters: `afterEnqueuedAt`, `afterStartedAt`, `afterFinishedAt`, `beforeEnqueuedAt`,`beforeStartedAt`, or `beforeFinishedAt`.
 
 For example, to delete tasks by `uid`:
 
