--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -86,7 +86,7 @@ Done in #2763 by @irevoire, @Kerollmops, and @loiclec.
 
 When doing important changes on a primary data store, you need them to be synchronized with Meilisearch. To avoid any downtime, Meilisearch now provides a seamless way to point to a new up-to-date index: swapping indexes.
 
-To swap indexes, use:
+To swap indexes, use the new `/swap-indexes` route:
 
 ```bash
 curl \
