--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -114,7 +114,7 @@ Done in #2763 by @irevoire, @Kerollmops, and @loiclec.
 
 ## Configuration file support
 
-You can now pass a configuration file to Meilisearch to set [the available options](https://docs.meilisearch.com/learn/configuration/instance_options.html#all-instance-options).
+You can now use a configuration file to set [instance options](https://docs.meilisearch.com/learn/configuration/instance_options.html#all-instance-options).
 
 By default, Meilisearch will read the file present in the working directory named: `./config.toml`.
 
