--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -116,7 +116,7 @@ Done in #2763 by @irevoire, @Kerollmops, and @loiclec.
 
 You can now use a configuration file to set [instance options](https://docs.meilisearch.com/learn/configuration/instance_options.html#all-instance-options).
 
-By default, Meilisearch will read the file present in the working directory named: `./config.toml`.
+By default, Meilisearch will search the working directory for a file named `./config.toml`.
 
 To pass another configuration file, you can use the `--config-file-path` option:
 
