--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -118,7 +118,7 @@ You can now use a configuration file to set [instance options](https://docs.meil
 
 By default, Meilisearch will search the working directory for a file named `./config.toml`.
 
-To pass another configuration file, you can use the `--config-file-path` option:
+You can use the `--config-file-path` option if you want to keep your configuration file in another directory:
 
 ```bash
 meilisearch --config-file-path="./my-config.toml"
