--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -132,7 +132,7 @@ master_key = "MY_MASTER_KEY"
 schedule_snapshot = true
 ```
 
-You can also download the default configuration file we provide in our repository:
+You can download a default configuration file from our repository:
 
 ```bash
 curl https://raw.githubusercontent.com/meilisearch/meilisearch/main/config.toml > config.toml
