--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -139,7 +139,7 @@ curl https://raw.githubusercontent.com/meilisearch/meilisearch/main/config.toml 
 ```
 
 <!-- The following line should be put in the official release changelogs only -->
-Read more about [configuration file]().
+Read more about [customizing Meilisearch with a configuration file]().
 
 Done in #2745, #2928, #2804, and #2841 by @mlemesle, @choznerol, @arriven and @curquiza
 
