--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -149,7 +149,7 @@ TBD
 
 ## Other improvements
 
-* Full support for compressed (Gzip, Brotli, Zlib) API requests (#2876) @mou
+* Full support for compressed API requests (Gzip, Brotli, Zlib)  (#2876) @mou
 * Significant indexing speed improvements (meilisearch/milli#639 and meilisearch/milli#619) @loiclec
 * Provide Apple Silicon binaries (#2837) @jeertmans
 * Add missing environment variables for dump and snapshot features (#2738) @gmourier
