--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -154,7 +154,7 @@ TBD
 * Provide Apple Silicon binaries (#2837) @jeertmans
 * Add missing environment variables for dump and snapshot features (#2738) @gmourier
 * Increase max concurrent readers from 126 to 1024 (#2830) @arriven
-* Reduce the size of the Meilisearch binary: allow building without specialized tokenizations (#2773) @jirutka
+* Reduce the size of the Meilisearch binary: allow excluding specialized tokenizations when building binaries (#2773) @jirutka
 
 # Behavior changes ⚠️
 
