--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -159,7 +159,7 @@ TBD
 # Behavior changes ⚠️
 
 * Rename `receivedDocumentIds` into `matchedDocuments` in the task object when performing a [`delete-batch` action](https://docs.meilisearch.com/reference/api/documents.html#delete-documents-by-batch) (#2826) @Ugzuzg
-* Change default bind address from `127.0.0.1` to `localhost`, making the default address available with IPv4 and IPv6 (#2861) @Fall1ngStar
+* Change default bind address from `127.0.0.1` to `localhost`, making the default address available in IPv4 and IPv6 (#2861) @Fall1ngStar
 
 # Fixes 🐞
 
