--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -163,7 +163,7 @@ TBD
 
 # Fixes 🐞
 
-* Improve the error message when adding documents: replace a meaningless serde message (#2819) @onyxcherry
+* Improve error message when adding documents: replace a meaningless serde message (#2819) @onyxcherry
 * Fix `dumpCreation` tasks (#2890) @washbin
 * Don't panic when the error length is slightly over 100 (#2727) @onyxcherry
 * Fix phrase search (meilisearch/milli#639 and meilisearch/milli#647) @loiclec
