--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -164,11 +164,11 @@ TBD
 # Fixes 🐞
 
 * Improve error message when adding documents: replace a meaningless serde message (#2819) @onyxcherry
-* Fix `dumpCreation` tasks (#2890) @washbin
+* Fix `dumpCreation` tasks bug (#2890) @washbin
 * Don't panic when the error length is slightly over 100 (#2727) @onyxcherry
-* Fix phrase search (meilisearch/milli#639 and meilisearch/milli#647) @loiclec
-* Fix filtering (meilisearch/milli#619) @loiclec
-* Fix `facetDistribution` when setting `maxFacetPerValue` if a few documents are returned (meilisearch/milli#619) @loiclec
+* Fix phrase search bug (meilisearch/milli#639 and meilisearch/milli#647) @loiclec
+* Fix filtering bug (meilisearch/milli#619) @loiclec
+* Fix `facetDistribution` when setting `maxFacetPerValue` if only a few documents are returned (meilisearch/milli#619) @loiclec
 
 # Misc
 
