--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -173,7 +173,7 @@ TBD
 # Misc
 
 * GitHub CIs and tests
-  * Add dry run for publishing binaries: check the compilation works (#2726 and #2733) @curquiza
+  * Add dry run for publishing binaries: check if the compilation works (#2726 and #2733) @curquiza
   * Add CI workflow to update the Meilisearch version in Cargo.toml files (#2741 and #2744) @curquiza
   * Add CI manifest to automate some steps when closing/creating a Milestone (#2739, #2852, #2853) @curquiza
   * Improve Docker CI for cloud team (#2790, #2896) @curquiza
